--- a/index.html
+++ b/index.html
@@ -2,244 +2,159 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Habit Tracker</title>
   <style>
     body {
       font-family: Arial, sans-serif;
-      background: #f4f4f9;
-      margin: 0;
-      padding: 0;
       display: flex;
-      min-height: 100vh;
+      margin: 0;
+      height: 100vh;
     }
-
-    /* Sidebar for badge preview */
-    .sidebar {
-      width: 220px;
-      background: #fff;
-      padding: 20px;
-      border-right: 2px solid #ddd;
-      box-shadow: 2px 0 5px rgba(0,0,0,0.05);
-    }
-    .sidebar h2 {
-      text-align: center;
-      margin-bottom: 15px;
-      font-size: 18px;
-      color: #444;
-    }
-    .preview-badge {
-      text-align: center;
-      margin-bottom: 15px;
-      opacity: 0.4; /* default locked look */
-    }
-    .preview-badge.unlocked {
-      opacity: 1;
-    }
-    .preview-badge img {
-      width: 70px;
-      height: 70px;
-      display: block;
-      margin: auto;
-    }
-    .preview-badge p {
-      margin: 5px 0 0;
-      font-size: 14px;
-    }
-
-    /* Main content */
     .main {
-      flex: 1;
+      flex: 3;
       padding: 20px;
-      text-align: center;
     }
-
+    .sidebar {
+      flex: 1;
+      background: #f4f4f4;
+      padding: 20px;
+      border-left: 2px solid #ccc;
+      overflow-y: auto;
+    }
     h1 {
       color: #333;
     }
+    ul {
+      list-style: none;
+      padding: 0;
+    }
+    li {
+      margin: 10px 0;
+    }
     button {
+      margin-top: 15px;
+      padding: 10px 20px;
+      font-size: 16px;
+      cursor: pointer;
       background: #4CAF50;
       color: white;
       border: none;
-      padding: 12px 24px;
-      margin: 10px;
-      font-size: 16px;
-      cursor: pointer;
-      border-radius: 8px;
-    }
-    button:disabled {
-      background: #999;
-      cursor: not-allowed;
-    }
-    button:hover:not(:disabled) {
-      background: #45a049;
-    }
-    .status {
-      margin: 20px 0;
-      font-size: 18px;
+      border-radius: 5px;
     }
     .badges {
       margin-top: 20px;
     }
     .badge {
-      display: inline-block;
-      margin: 8px;
-      padding: 10px;
-      border-radius: 10px;
-      background: #ddd;
+      margin: 10px 0;
     }
     .badge img {
-      width: 80px;
-      height: 80px;
+      max-width: 100px;
       display: block;
-      margin: auto;
     }
-    .checklist {
-      text-align: left;
-      display: inline-block;
-      margin-top: 20px;
+    .instructions {
+      background: #e8f4ff;
       padding: 15px;
-      background: #fff;
-      border-radius: 10px;
-      box-shadow: 0 2px 5px rgba(0,0,0,0.1);
-    }
-    .checklist label {
-      display: block;
-      margin: 8px 0;
-      font-size: 16px;
+      border: 1px solid #b3daff;
+      border-radius: 8px;
+      margin-bottom: 15px;
     }
   </style>
 </head>
 <body>
-  <!-- Sidebar badge preview -->
-  <div class="sidebar">
-    <h2>🎖 Badge Preview</h2>
-    <div id="previewContainer"></div>
+  <div class="main">
+    <h1>☀️ Sun Safety Habit Tracker</h1>
+    <div class="instructions">
+      ✅ Complete the tasks below each day.<br>
+      🔘 Once all are checked, press <strong>"Mark Today as Complete"</strong>.<br>
+      🌟 Keep your streak going to unlock special badges!
+    </div>
+    <ul id="task-list">
+      <li><label><input type="checkbox" class="task"> Apply sunscreen</label></li>
+      <li><label><input type="checkbox" class="task"> Wear a hat</label></li>
+      <li><label><input type="checkbox" class="task"> Stay in the shade</label></li>
+      <li><label><input type="checkbox" class="task"> Wear sun protective clothing</label></li>
+      <li><label><input type="checkbox" class="task"> Wear sunglasses</label></li>
+    </ul>
+    <button onclick="markComplete()">Mark Today as Complete</button>
+    <div id="status"></div>
   </div>
 
-  <!-- Main tracker -->
-  <div class="main">
-    <h1>🌱 Habit Tracker</h1>
-    
-    <div class="status">
-      <p id="streak">🔥 Current streak: 0 days</p>
-    </div>
-
-    <div class="checklist">
-      <h2>☀️ Daily Sun-Safe Checklist</h2>
-      <label><input type="checkbox" class="task"> Apply sunscreen</label>
-      <label><input type="checkbox" class="task"> Wear a hat</label>
-      <label><input type="checkbox" class="task"> Stay in the shade</label>
-      <label><input type="checkbox" class="task"> Wear sun protective clothing</label>
-      <label><input type="checkbox" class="task"> Wear sunglasses</label>
-    </div>
-
-    <button id="completeBtn" disabled>Mark Today Complete ✅</button>
-
-    <div class="badges">
-      <h2>🏅 Badges Earned</h2>
-      <div id="badgeContainer"></div>
+  <div class="sidebar">
+    <h2>🎖️ Your Badges</h2>
+    <div class="badges" id="badges">
+      <div class="badge" id="badge5" style="display:none;">
+        <a href="https://freeimage.host/i/KJIQXZQ">
+          <img src="https://iili.io/KJIQXZQ.md.png" alt="5 Day Badge">
+        </a>
+        <p>5 Days Streak!</p>
+      </div>
+      <div class="badge" id="badge10" style="display:none;">
+        <a href="https://freeimage.host/i/KJIQjnV">
+          <img src="https://iili.io/KJIQjnV.md.png" alt="10 Day Badge">
+        </a>
+        <p>10 Days Streak!</p>
+      </div>
+      <div class="badge" id="badge15" style="display:none;">
+        <a href="https://freeimage.host/i/KJIQN6P">
+          <img src="https://iili.io/KJIQN6P.md.png" alt="15 Day Badge">
+        </a>
+        <p>15 Days Streak!</p>
+      </div>
+      <div class="badge" id="badge20" style="display:none;">
+        <a href="https://freeimage.host/i/KJIQwMB">
+          <img src="https://iili.io/KJIQwMB.md.png" alt="20 Day Badge">
+        </a>
+        <p>20 Days Streak!</p>
+      </div>
+      <div class="badge" id="badge25" style="display:none;">
+        <a href="https://freeimage.host/i/KJIQeF1">
+          <img src="https://iili.io/KJIQeF1.md.png" alt="25 Day Badge">
+        </a>
+        <p>25 Days Streak!</p>
+      </div>
+      <div class="badge" id="badge30" style="display:none;">
+        <a href="https://freeimage.host/i/KJIQkcF">
+          <img src="https://iili.io/KJIQkcF.md.png" alt="30 Day Badge">
+        </a>
+        <p>30 Days Streak!</p>
+      </div>
     </div>
   </div>
 
   <script>
-    const BADGE_MILESTONES = [5, 10, 15, 20, 25, 30];
-    const BADGE_IMAGES = {
-      5: "https://iili.io/KJIQXZQ.md.png",
-      10: "https://iili.io/KJIQjnV.md.png",
-      15: "https://iili.io/KJIQN6P.md.png",
-      20: "https://iili.io/KJIQwMB.md.png",
-      25: "https://iili.io/KJIQeF1.md.png",
-      30: "https://iili.io/KJIQkcF.md.png"
-    };
-
-    const progress = JSON.parse(localStorage.getItem("habitProgress")) || {
-      streak: 0,
-      lastCompleted: null,
-      badges: []
-    };
-
-    const streakEl = document.getElementById("streak");
-    const badgeContainer = document.getElementById("badgeContainer");
-    const previewContainer = document.getElementById("previewContainer");
-    const completeBtn = document.getElementById("completeBtn");
-    const tasks = document.querySelectorAll(".task");
-
-    function updateUI() {
-      streakEl.textContent = `🔥 Current streak: ${progress.streak} days`;
-      
-      // Earned badges display
-      badgeContainer.innerHTML = "";
-      if (progress.badges.length === 0) {
-        badgeContainer.innerHTML = "<p>No badges yet — keep going!</p>";
-      } else {
-        progress.badges.forEach(b => {
-          const div = document.createElement("div");
-          div.className = "badge";
-          div.innerHTML = `<a href="${BADGE_IMAGES[b]}" target="_blank"><img src="${BADGE_IMAGES[b]}" alt="${b}-day badge"></a><p>${b}-day</p>`;
-          badgeContainer.appendChild(div);
-        });
-      }
-
-      // Sidebar preview
-      previewContainer.innerHTML = "";
-      BADGE_MILESTONES.forEach(b => {
-        const div = document.createElement("div");
-        div.className = "preview-badge";
-        if (progress.badges.includes(b)) {
-          div.classList.add("unlocked");
-        }
-        div.innerHTML = `<img src="${BADGE_IMAGES[b]}" alt="${b}-day badge"><p>${b}-day ${progress.badges.includes(b) ? "" : "(Locked)"}</p>`;
-        previewContainer.appendChild(div);
-      });
-    }
-
-    function checkTasks() {
-      const allChecked = Array.from(tasks).every(task => task.checked);
-      completeBtn.disabled = !allChecked;
-    }
+    let streak = localStorage.getItem('streak') ? parseInt(localStorage.getItem('streak')) : 0;
 
     function markComplete() {
-      const today = new Date().toISOString().split("T")[0];
-      if (progress.lastCompleted === today) {
-        alert("✅ You already marked today complete!");
+      let tasks = document.querySelectorAll('.task');
+      let allDone = true;
+      tasks.forEach(task => {
+        if (!task.checked) allDone = false;
+      });
+
+      if (!allDone) {
+        document.getElementById('status').innerText = "⚠️ Please complete all tasks before marking the day!";
         return;
       }
 
-      if (progress.lastCompleted) {
-        const lastDate = new Date(progress.lastCompleted);
-        const yesterday = new Date();
-        yesterday.setDate(yesterday.getDate() - 1);
+      streak++;
+      localStorage.setItem('streak', streak);
+      document.getElementById('status').innerText = "✅ Great job! Current streak: " + streak + " days.";
+      checkBadges();
 
-        if (lastDate.toDateString() === yesterday.toDateString()) {
-          progress.streak += 1;
-        } else {
-          progress.streak = 1; // reset
-        }
-      } else {
-        progress.streak = 1;
-      }
-
-      progress.lastCompleted = today;
-
-      // Badge unlock
-      if (BADGE_MILESTONES.includes(progress.streak) && !progress.badges.includes(progress.streak)) {
-        progress.badges.push(progress.streak);
-        alert(`🎉 Congrats! You earned the ${progress.streak}-day badge!`);
-      }
-
-      localStorage.setItem("habitProgress", JSON.stringify(progress));
-      updateUI();
-
-      // Reset checklist
+      // Reset checkboxes
       tasks.forEach(task => task.checked = false);
-      checkTasks();
     }
 
-    completeBtn.addEventListener("click", markComplete);
-    tasks.forEach(task => task.addEventListener("change", checkTasks));
+    function checkBadges() {
+      if (streak >= 5) document.getElementById('badge5').style.display = 'block';
+      if (streak >= 10) document.getElementById('badge10').style.display = 'block';
+      if (streak >= 15) document.getElementById('badge15').style.display = 'block';
+      if (streak >= 20) document.getElementById('badge20').style.display = 'block';
+      if (streak >= 25) document.getElementById('badge25').style.display = 'block';
+      if (streak >= 30) document.getElementById('badge30').style.display = 'block';
+    }
 
-    updateUI();
+    window.onload = checkBadges;
   </script>
 </body>
 </html>
